# altcha_rust_server

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  nginx.conf
scripts/: altcha-daemon.sh  altcha_rust.rc
src/: main.rs
